<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>

    <string name="api_key_label">api_key</string>
    <string name="movie_extra_key">movie</string>

    <!-- ******************* MainActivity ******************* -->
    <string name="no_internet">No internet connection. Please connect and try again.</string>
    <string name="screen_width_extra_key">screen_width</string>
    <string name="no_favorites">No favorite movies have been selected yet.</string>
    <string name="last_position_key">last_position_key</string>

    <!-- ******************* Settings ******************* -->
    <string name="title_activity_settings">Settings</string>
    <string name="no_internet_toast">Cannot update settings when there is no internet.</string>
    <string name="attribution">This app uses the The Movie Database (TMDb) API but is not endorsed or certified by TMDb.</string>

    <!-- ******************* preference strings ******************* -->
    <!-- Label for the sort by preference -->
    <string name="pref_sort_by_label">Sort by:</string>

    <!-- Label for sort by options in sort by preference -->
    <string name="pref_sort_by_label_popularity">Popularity</string>
    <string name="pref_sort_by_label_rating">Rating</string>
    <string name="pref_sort_by_label_favorites">Favorites</string>

    <!-- Key name for sort by preferences in SharedPreferences -->
    <string name="pref_sort_by_key" translatable="false">sort_by</string>

    <!-- Value in SharedPreferences for sort by options -->
    <string name="pref_sort_by_popularity" translatable="false">popularity</string>
    <string name="pref_sort_by_rating" translatable="false">rating</string>
    <string name="pref_sort_by_favorites" translatable="false">favorites</string>

    <!-- ******************* MovieDetailsActivity strings ******************* -->
    <string name="released">Released </string>
    <string name="average_rating">Average rating: </string>
    <string name="out_of_ten">/10</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="unmark_as_favorite">Unmark as favorite</string>
    <string name="trailers">Trailers: </string>
    <string name="no_trailers">No trailers available for this film</string>
    <string name="reviews">Reviews: </string>
    <string name="no_reviews">No reviews available for this film</string>
    <string name="by">By: </string>
    <string name="added_to_favorites">This film has been added to your favorites.</string>
    <string name="removed_from_favorites">This film has been removed from your favorites.</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>


</resources>