<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.amiculous.popularmoviesi.MovieDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
                  android:id="@+id/toolbar"
                  android:layout_width="match_parent"
                  android:layout_height="?attr/actionBarSize"
                  android:background="?attr/colorPrimary"
                  app:layout_scrollFlags="scroll|exitUntilCollapsed"
                  app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.amiculous.popularmoviesi.MovieDetailActivity">

        <TextView
            android:id="@+id/text_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:elevation="@dimen/medium_padding"
            android:gravity="center"
            android:paddingBottom="@dimen/large_padding"
            android:paddingTop="@dimen/large_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="#FFF"
            android:textSize="@dimen/large_text_size"
            android:visibility="gone"
            tools:text="Chappie" />


        <TextView
            android:id="@+id/text_no_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/no_internet"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_layout_favorite_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/medium_padding"
            tools:context="com.amiculous.popularmoviesi.MovieDetailActivity">

            <ImageView
                android:id="@+id/image_movie_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/large_padding"
                android:layout_marginStart="@dimen/large_padding"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/image_movie_poster"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/text_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="2015" />

                <TextView
                    android:id="@+id/text_user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_release_date"
                    tools:text="8.3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/out_of_ten"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toEndOf="@id/text_user_rating"
                    app:layout_constraintTop_toBottomOf="@id/text_release_date" />

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/text_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/large_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_movie_poster"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. " />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linear_layout_requires_internet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium_padding">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/extra_small_padding"
                android:background="@color/dividerColor"
                android:paddingBottom="@dimen/small_padding" />

            <TextView
                android:id="@+id/text_trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_padding"
                android:text="@string/trailers"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/text_no_trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/medium_padding"
                android:text="@string/no_trailers"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:visibility="visible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvTrailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/extra_small_padding"
                android:background="@color/dividerColor"
                android:paddingBottom="@dimen/small_padding"
                android:paddingTop="@dimen/small_padding" />

            <TextView
                android:id="@+id/text_rviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_padding"
                android:text="@string/reviews"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/text_no_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/medium_padding"
                android:text="@string/no_reviews"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:visibility="visible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvReviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>


        </LinearLayout>
    </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_favorite_border_white_24dp" />

</android.support.design.widget.CoordinatorLayout>